~ ng-truncate fixed

--- a/front/app/shared/components/collection-edit/_collectionEdit.component.sass
+++ b/front/app/shared/components/collection-edit/_collectionEdit.component.sass
@@ -1,4 +1,6 @@
 collection-edit
+  .md-truncate
+    width: 100%
   md-sidenav.md-sidenav-right
     top: 64px
     width: 50%
